[gd_scene load_steps=2 format=3 uid="uid://dr8k3m5y4qr9x"]

[ext_resource type="Script" path="res://UI/RecruitmentUI.gd" id="1_recruitment"]

[node name="RecruitmentUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_recruitment")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Recruitment"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PlayerInfoContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="PlayerInfoLabel" type="Label" parent="MarginContainer/VBoxContainer/PlayerInfoContainer"]
layout_mode = 2
text = "Money: 0 | Troops: 0 / 10"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TroopList" type="GridContainer" parent="MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 3

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="FooterContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TotalCostLabel" type="Label" parent="MarginContainer/VBoxContainer/FooterContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Total Cost: 0 PACs"
horizontal_alignment = 1

[node name="ConfirmButton" type="Button" parent="MarginContainer/VBoxContainer/FooterContainer"]
layout_mode = 2
text = "Confirm"

[node name="CancelButton" type="Button" parent="MarginContainer/VBoxContainer/FooterContainer"]
layout_mode = 2
text = "Cancel"
